--- a/death-cause.ipynb
+++ b/death-cause.ipynb
@@ -2,15 +2,261 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Covid-19 Deaths</th>\n",
+       "      <th>Cardiovascular diseases</th>\n",
+       "      <th>Respiratory diseases</th>\n",
+       "      <th>Kidney diseases</th>\n",
+       "      <th>Neonatal disorders</th>\n",
+       "      <th>Meningitis</th>\n",
+       "      <th>Malaria</th>\n",
+       "      <th>Interpersonal violence</th>\n",
+       "      <th>HIV/AIDS</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Neoplasms</th>\n",
+       "      <th>Fire, heat</th>\n",
+       "      <th>Drowning</th>\n",
+       "      <th>Drug use disorders</th>\n",
+       "      <th>Road injuries</th>\n",
+       "      <th>Environmental heat and cold exposure</th>\n",
+       "      <th>Self-harm</th>\n",
+       "      <th>Conflict and terrorism</th>\n",
+       "      <th>Diabetes</th>\n",
+       "      <th>Unnamed: 32</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2201.0</td>\n",
+       "      <td>61995</td>\n",
+       "      <td>7082</td>\n",
+       "      <td>5637</td>\n",
+       "      <td>23701</td>\n",
+       "      <td>1563</td>\n",
+       "      <td>530</td>\n",
+       "      <td>5015</td>\n",
+       "      <td>318</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21247</td>\n",
+       "      <td>485</td>\n",
+       "      <td>1687</td>\n",
+       "      <td>406</td>\n",
+       "      <td>8254</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1613</td>\n",
+       "      <td>24295</td>\n",
+       "      <td>4817</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>1181.0</td>\n",
+       "      <td>12904</td>\n",
+       "      <td>815</td>\n",
+       "      <td>329</td>\n",
+       "      <td>161</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>57</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4705</td>\n",
+       "      <td>18</td>\n",
+       "      <td>36</td>\n",
+       "      <td>29</td>\n",
+       "      <td>243</td>\n",
+       "      <td>4</td>\n",
+       "      <td>152</td>\n",
+       "      <td>0</td>\n",
+       "      <td>175</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>2762.0</td>\n",
+       "      <td>97931</td>\n",
+       "      <td>7528</td>\n",
+       "      <td>8201</td>\n",
+       "      <td>8756</td>\n",
+       "      <td>292</td>\n",
+       "      <td>0</td>\n",
+       "      <td>459</td>\n",
+       "      <td>264</td>\n",
+       "      <td>...</td>\n",
+       "      <td>23816</td>\n",
+       "      <td>782</td>\n",
+       "      <td>526</td>\n",
+       "      <td>526</td>\n",
+       "      <td>11051</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1515</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5328</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>169</td>\n",
+       "      <td>39</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>230</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>25724</td>\n",
+       "      <td>3934</td>\n",
+       "      <td>2464</td>\n",
+       "      <td>18189</td>\n",
+       "      <td>2520</td>\n",
+       "      <td>10784</td>\n",
+       "      <td>974</td>\n",
+       "      <td>16802</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12791</td>\n",
+       "      <td>513</td>\n",
+       "      <td>793</td>\n",
+       "      <td>80</td>\n",
+       "      <td>9253</td>\n",
+       "      <td>114</td>\n",
+       "      <td>1928</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4033</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country Name  Covid-19 Deaths  Cardiovascular diseases  \\\n",
+       "0  Afghanistan           2201.0                    61995   \n",
+       "1      Albania           1181.0                    12904   \n",
+       "2      Algeria           2762.0                    97931   \n",
+       "3      Andorra             84.0                      169   \n",
+       "4       Angola             33.0                    25724   \n",
+       "\n",
+       "   Respiratory diseases   Kidney diseases  Neonatal disorders   Meningitis   \\\n",
+       "0                   7082             5637                23701         1563   \n",
+       "1                    815              329                  161           13   \n",
+       "2                   7528             8201                 8756          292   \n",
+       "3                     39               16                    0            0   \n",
+       "4                   3934             2464                18189         2520   \n",
+       "\n",
+       "   Malaria   Interpersonal violence  HIV/AIDS  ...  Neoplasms  Fire, heat  \\\n",
+       "0       530                    5015       318  ...      21247         485   \n",
+       "1         0                      57         2  ...       4705          18   \n",
+       "2         0                     459       264  ...      23816         782   \n",
+       "3         0                       0         3  ...        230           0   \n",
+       "4     10784                     974     16802  ...      12791         513   \n",
+       "\n",
+       "   Drowning  Drug use disorders  Road injuries  \\\n",
+       "0      1687                 406           8254   \n",
+       "1        36                  29            243   \n",
+       "2       526                 526          11051   \n",
+       "3         0                   0              8   \n",
+       "4       793                  80           9253   \n",
+       "\n",
+       "   Environmental heat and cold exposure  Self-harm   Conflict and terrorism  \\\n",
+       "0                                    59       1613                    24295   \n",
+       "1                                     4        152                        0   \n",
+       "2                                    40       1515                       13   \n",
+       "3                                     0          8                        0   \n",
+       "4                                   114       1928                       16   \n",
+       "\n",
+       "   Diabetes   Unnamed: 32  \n",
+       "0       4817          NaN  \n",
+       "1        175          NaN  \n",
+       "2       5328          NaN  \n",
+       "3          9          NaN  \n",
+       "4       4033          NaN  \n",
+       "\n",
+       "[5 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "raw_data = pd.read_csv(\"death-cause-reason-by-country.csv\")\n",
+    "raw_data.head()"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d2c53a8514c79cc148d46934bc8b056e82de35c7c8040deceb29a5f5195a57bb"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.2 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
