causes of death

--- a/death-cause.ipynb
+++ b/death-cause.ipynb
@@ -235,6 +235,25 @@
     "raw_data = pd.read_csv(\"death-cause-reason-by-country.csv\")\n",
     "raw_data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Covid-19 Deaths', 'Cardiovascular diseases', 'Respiratory diseases ', 'Kidney diseases', 'Neonatal disorders ', 'Meningitis ', 'Malaria ', 'Interpersonal violence', 'HIV/AIDS', 'Tuberculosis', 'Maternal disorders', 'Lower respiratory infections', 'Alcohol use disorders', 'Diarrheal diseases', 'Poisoning', 'Nutritional deficiencies', \" Alzheimer's disease\", \"Parkinson's disease\", ' Acute hepatitis', 'Digestive diseases', ' Cirrhosis and other chronic liver diseases', 'Protein-energy malnutrition', 'Neoplasms', 'Fire, heat', 'Drowning', 'Drug use disorders', 'Road injuries', 'Environmental heat and cold exposure', 'Self-harm', ' Conflict and terrorism']\n"
+     ]
+    }
+   ],
+   "source": [
+    "causes = list(raw_data.columns)\n",
+    "causes = causes[1:-2]\n",
+    "print(causes)"
+   ]
   }
  ],
  "metadata": {
