edit: initial index

--- a/death-cause.ipynb
+++ b/death-cause.ipynb
@@ -238,21 +238,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Covid-19 Deaths', 'Cardiovascular diseases', 'Respiratory diseases ', 'Kidney diseases', 'Neonatal disorders ', 'Meningitis ', 'Malaria ', 'Interpersonal violence', 'HIV/AIDS', 'Tuberculosis', 'Maternal disorders', 'Lower respiratory infections', 'Alcohol use disorders', 'Diarrheal diseases', 'Poisoning', 'Nutritional deficiencies', \" Alzheimer's disease\", \"Parkinson's disease\", ' Acute hepatitis', 'Digestive diseases', ' Cirrhosis and other chronic liver diseases', 'Protein-energy malnutrition', 'Neoplasms', 'Fire, heat', 'Drowning', 'Drug use disorders', 'Road injuries', 'Environmental heat and cold exposure', 'Self-harm', ' Conflict and terrorism']\n"
+      "The causes are:['Cardiovascular diseases', 'Respiratory diseases ', 'Kidney diseases', 'Neonatal disorders ', 'Meningitis ', 'Malaria ', 'Interpersonal violence', 'HIV/AIDS', 'Tuberculosis', 'Maternal disorders', 'Lower respiratory infections', 'Alcohol use disorders', 'Diarrheal diseases', 'Poisoning', 'Nutritional deficiencies', \" Alzheimer's disease\", \"Parkinson's disease\", ' Acute hepatitis', 'Digestive diseases', ' Cirrhosis and other chronic liver diseases', 'Protein-energy malnutrition', 'Neoplasms', 'Fire, heat', 'Drowning', 'Drug use disorders', 'Road injuries', 'Environmental heat and cold exposure', 'Self-harm', ' Conflict and terrorism']\n"
      ]
     }
    ],
    "source": [
-    "causes = list(raw_data.columns)\n",
-    "causes = causes[1:-2]\n",
-    "print(causes)"
+    "causes = list(raw_data.columns) # list all the columns\n",
+    "causes = causes[2:-2] # fetch all columns from index 2 until the last two.\n",
+    "print(\"The causes are:\" + str(causes))"
    ]
   }
  ],
