edit: print all raw_data

--- a/death-cause.ipynb
+++ b/death-cause.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,58 +170,238 @@
        "      <td>4033</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>186</th>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>240161</td>\n",
+       "      <td>36229</td>\n",
+       "      <td>21485</td>\n",
+       "      <td>6468</td>\n",
+       "      <td>747</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1267</td>\n",
+       "      <td>6399</td>\n",
+       "      <td>...</td>\n",
+       "      <td>112564</td>\n",
+       "      <td>608</td>\n",
+       "      <td>6098</td>\n",
+       "      <td>1176</td>\n",
+       "      <td>24153</td>\n",
+       "      <td>82</td>\n",
+       "      <td>8114</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29391</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>Wales</td>\n",
+       "      <td>512.0</td>\n",
+       "      <td>10519</td>\n",
+       "      <td>2892</td>\n",
+       "      <td>426</td>\n",
+       "      <td>57</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10569</td>\n",
+       "      <td>20</td>\n",
+       "      <td>15</td>\n",
+       "      <td>173</td>\n",
+       "      <td>130</td>\n",
+       "      <td>8</td>\n",
+       "      <td>310</td>\n",
+       "      <td>0</td>\n",
+       "      <td>326</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>610.0</td>\n",
+       "      <td>55752</td>\n",
+       "      <td>5738</td>\n",
+       "      <td>2676</td>\n",
+       "      <td>18982</td>\n",
+       "      <td>479</td>\n",
+       "      <td>5089</td>\n",
+       "      <td>820</td>\n",
+       "      <td>347</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12681</td>\n",
+       "      <td>839</td>\n",
+       "      <td>843</td>\n",
+       "      <td>261</td>\n",
+       "      <td>11717</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1560</td>\n",
+       "      <td>13402</td>\n",
+       "      <td>1815</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>390.0</td>\n",
+       "      <td>18157</td>\n",
+       "      <td>2388</td>\n",
+       "      <td>1931</td>\n",
+       "      <td>9851</td>\n",
+       "      <td>2065</td>\n",
+       "      <td>4777</td>\n",
+       "      <td>1616</td>\n",
+       "      <td>22540</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9789</td>\n",
+       "      <td>326</td>\n",
+       "      <td>359</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2285</td>\n",
+       "      <td>84</td>\n",
+       "      <td>1398</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2573</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>369.0</td>\n",
+       "      <td>17810</td>\n",
+       "      <td>2891</td>\n",
+       "      <td>2292</td>\n",
+       "      <td>8609</td>\n",
+       "      <td>1450</td>\n",
+       "      <td>2068</td>\n",
+       "      <td>1434</td>\n",
+       "      <td>20722</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12353</td>\n",
+       "      <td>662</td>\n",
+       "      <td>827</td>\n",
+       "      <td>127</td>\n",
+       "      <td>2554</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2403</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3460</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
+       "<p>191 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Country Name  Covid-19 Deaths  Cardiovascular diseases  \\\n",
-       "0  Afghanistan           2201.0                    61995   \n",
-       "1      Albania           1181.0                    12904   \n",
-       "2      Algeria           2762.0                    97931   \n",
-       "3      Andorra             84.0                      169   \n",
-       "4       Angola             33.0                    25724   \n",
+       "    Country Name  Covid-19 Deaths  Cardiovascular diseases  \\\n",
+       "0    Afghanistan           2201.0                    61995   \n",
+       "1        Albania           1181.0                    12904   \n",
+       "2        Algeria           2762.0                    97931   \n",
+       "3        Andorra             84.0                      169   \n",
+       "4         Angola             33.0                    25724   \n",
+       "..           ...              ...                      ...   \n",
+       "186      Vietnam             35.0                   240161   \n",
+       "187        Wales            512.0                    10519   \n",
+       "188        Yemen            610.0                    55752   \n",
+       "189       Zambia            390.0                    18157   \n",
+       "190     Zimbabwe            369.0                    17810   \n",
        "\n",
-       "   Respiratory diseases   Kidney diseases  Neonatal disorders   Meningitis   \\\n",
-       "0                   7082             5637                23701         1563   \n",
-       "1                    815              329                  161           13   \n",
-       "2                   7528             8201                 8756          292   \n",
-       "3                     39               16                    0            0   \n",
-       "4                   3934             2464                18189         2520   \n",
+       "     Respiratory diseases   Kidney diseases  Neonatal disorders   Meningitis   \\\n",
+       "0                     7082             5637                23701         1563   \n",
+       "1                      815              329                  161           13   \n",
+       "2                     7528             8201                 8756          292   \n",
+       "3                       39               16                    0            0   \n",
+       "4                     3934             2464                18189         2520   \n",
+       "..                     ...              ...                  ...          ...   \n",
+       "186                  36229            21485                 6468          747   \n",
+       "187                   2892              426                   57           14   \n",
+       "188                   5738             2676                18982          479   \n",
+       "189                   2388             1931                 9851         2065   \n",
+       "190                   2891             2292                 8609         1450   \n",
        "\n",
-       "   Malaria   Interpersonal violence  HIV/AIDS  ...  Neoplasms  Fire, heat  \\\n",
-       "0       530                    5015       318  ...      21247         485   \n",
-       "1         0                      57         2  ...       4705          18   \n",
-       "2         0                     459       264  ...      23816         782   \n",
-       "3         0                       0         3  ...        230           0   \n",
-       "4     10784                     974     16802  ...      12791         513   \n",
+       "     Malaria   Interpersonal violence  HIV/AIDS  ...  Neoplasms  Fire, heat  \\\n",
+       "0         530                    5015       318  ...      21247         485   \n",
+       "1           0                      57         2  ...       4705          18   \n",
+       "2           0                     459       264  ...      23816         782   \n",
+       "3           0                       0         3  ...        230           0   \n",
+       "4       10784                     974     16802  ...      12791         513   \n",
+       "..        ...                     ...       ...  ...        ...         ...   \n",
+       "186        59                    1267      6399  ...     112564         608   \n",
+       "187         0                      18        12  ...      10569          20   \n",
+       "188      5089                     820       347  ...      12681         839   \n",
+       "189      4777                    1616     22540  ...       9789         326   \n",
+       "190      2068                    1434     20722  ...      12353         662   \n",
        "\n",
-       "   Drowning  Drug use disorders  Road injuries  \\\n",
-       "0      1687                 406           8254   \n",
-       "1        36                  29            243   \n",
-       "2       526                 526          11051   \n",
-       "3         0                   0              8   \n",
-       "4       793                  80           9253   \n",
+       "     Drowning  Drug use disorders  Road injuries  \\\n",
+       "0        1687                 406           8254   \n",
+       "1          36                  29            243   \n",
+       "2         526                 526          11051   \n",
+       "3           0                   0              8   \n",
+       "4         793                  80           9253   \n",
+       "..        ...                 ...            ...   \n",
+       "186      6098                1176          24153   \n",
+       "187        15                 173            130   \n",
+       "188       843                 261          11717   \n",
+       "189       359                  60           2285   \n",
+       "190       827                 127           2554   \n",
        "\n",
-       "   Environmental heat and cold exposure  Self-harm   Conflict and terrorism  \\\n",
-       "0                                    59       1613                    24295   \n",
-       "1                                     4        152                        0   \n",
-       "2                                    40       1515                       13   \n",
-       "3                                     0          8                        0   \n",
-       "4                                   114       1928                       16   \n",
+       "     Environmental heat and cold exposure  Self-harm   Conflict and terrorism  \\\n",
+       "0                                      59       1613                    24295   \n",
+       "1                                       4        152                        0   \n",
+       "2                                      40       1515                       13   \n",
+       "3                                       0          8                        0   \n",
+       "4                                     114       1928                       16   \n",
+       "..                                    ...        ...                      ...   \n",
+       "186                                    82       8114                        0   \n",
+       "187                                     8        310                        0   \n",
+       "188                                    43       1560                    13402   \n",
+       "189                                    84       1398                        1   \n",
+       "190                                    37       2403                       11   \n",
        "\n",
-       "   Diabetes   Unnamed: 32  \n",
-       "0       4817          NaN  \n",
-       "1        175          NaN  \n",
-       "2       5328          NaN  \n",
-       "3          9          NaN  \n",
-       "4       4033          NaN  \n",
+       "     Diabetes   Unnamed: 32  \n",
+       "0         4817          NaN  \n",
+       "1          175          NaN  \n",
+       "2         5328          NaN  \n",
+       "3            9          NaN  \n",
+       "4         4033          NaN  \n",
+       "..         ...          ...  \n",
+       "186      29391          NaN  \n",
+       "187        326          NaN  \n",
+       "188       1815          NaN  \n",
+       "189       2573          NaN  \n",
+       "190       3460          NaN  \n",
        "\n",
-       "[5 rows x 33 columns]"
+       "[191 rows x 33 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,12 +413,12 @@
     "import seaborn as sns\n",
     "\n",
     "raw_data = pd.read_csv(\"death-cause-reason-by-country.csv\")\n",
-    "raw_data.head()"
+    "raw_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
